gg ez mid! thanks for the tutorial guys free LP